{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 432,
  "lineage": "c7ae4486-b566-7283-8835-b501c7411fc1",
  "resources": [
    {
      "mode": "data",
      "type": "aws_alb",
      "name": "hgalampalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "hga-ec2-tf-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-091a58610910a87a9",
            "arn": "arn:aws:ec2:ap-southeast-1:463423328685:instance/i-07fa6d68099a8ba91",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-07fa6d68099a8ba91",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "key_name": "hga-lamp-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-06410525177f199b4",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-0-108.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.108",
            "public_ip": "18.143.73.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "ExpirationDate": "2023-10.23",
                  "Name": "hga-tf-ms-instance",
                  "Owner": "adarsha.hg"
                },
                "throughput": 125,
                "volume_id": "vol-06d3374a635eee426",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0625342b8010e1165",
            "tags": {
              "ExpirationDate": "2023-09-13",
              "Name": "hga-tf-ms-instance",
              "Owner": "adarsha.hg",
              "RetentionPeriod": "2023-10-23"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fca4b7b852b4349d"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "hgalampalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hga-ec2-tf-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091a58610910a87a9",
            "arn": "arn:aws:ec2:ap-southeast-1:463423328685:instance/i-0afd7bb433c93ecc5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0afd7bb433c93ecc5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "hga-lamp-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fd16997595433a22",
            "private_dns": "ip-10-0-0-68.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.68",
            "public_ip": "3.0.20.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-037dbd0a012a2e90b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e518252d60bedf08",
            "tags": {
              "Name": "hga-ec2-tf-test-0"
            },
            "tags_all": {
              "Name": "hga-ec2-tf-test-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b4c44d8340a40e37"
            ]
          },
          "dependencies": [
            "aws_security_group.hga-sg1-tf-test",
            "aws_subnet.hga-subnet-tf-test",
            "aws_vpc.hga-vpc-tf-test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091a58610910a87a9",
            "arn": "arn:aws:ec2:ap-southeast-1:463423328685:instance/i-030843bdcbd0bb128",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030843bdcbd0bb128",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "hga-lamp-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07296723280cfb7f1",
            "private_dns": "ip-10-0-0-66.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.66",
            "public_ip": "54.169.148.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0670d0e34ba9eb626",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e518252d60bedf08",
            "tags": {
              "Name": "hga-ec2-tf-test-1"
            },
            "tags_all": {
              "Name": "hga-ec2-tf-test-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b4c44d8340a40e37"
            ]
          },
          "dependencies": [
            "aws_security_group.hga-sg1-tf-test",
            "aws_subnet.hga-subnet-tf-test",
            "aws_vpc.hga-vpc-tf-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hga-igw-tf-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:463423328685:internet-gateway/igw-001d30b4797f61885",
            "id": "igw-001d30b4797f61885",
            "owner_id": "463423328685",
            "tags": {
              "Name": "hga-igw-tf-test"
            },
            "tags_all": {
              "Name": "hga-igw-tf-test"
            },
            "vpc_id": "vpc-0be302e2fa3fdf6c5"
          },
          "dependencies": [
            "aws_vpc.hga-vpc-tf-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my-test-alb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "hga-lamp-alb-trg-atcmnt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hga-rt-tf-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:463423328685:route-table/rtb-09935281897609790",
            "id": "rtb-09935281897609790",
            "owner_id": "463423328685",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001d30b4797f61885",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hga-rt-tf-test"
            },
            "tags_all": {
              "Name": "hga-rt-tf-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be302e2fa3fdf6c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hga-igw-tf-test",
            "aws_vpc.hga-vpc-tf-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hga-route_assoc-tf-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0addcce33f101a8f5",
            "route_table_id": "rtb-09935281897609790",
            "subnet_id": "subnet-0e518252d60bedf08"
          },
          "dependencies": [
            "aws_internet_gateway.hga-igw-tf-test",
            "aws_route_table.hga-rt-tf-test",
            "aws_subnet.hga-subnet-tf-test",
            "aws_vpc.hga-vpc-tf-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hga-sg1-tf-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:463423328685:security-group/sg-0b4c44d8340a40e37",
            "description": "allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4c44d8340a40e37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "EFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-web20230828114001253100000003",
            "name_prefix": "allow-web",
            "owner_id": "463423328685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow web"
            },
            "tags_all": {
              "Name": "allow web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be302e2fa3fdf6c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hga-vpc-tf-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hga-subnet-tf-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:463423328685:subnet/subnet-0e518252d60bedf08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e518252d60bedf08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463423328685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hga-subnet-tf-test"
            },
            "tags_all": {
              "Name": "hga-subnet-tf-test"
            },
            "vpc_id": "vpc-0be302e2fa3fdf6c5"
          },
          "dependencies": [
            "aws_vpc.hga-vpc-tf-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hga-vpc-tf-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:463423328685:vpc/vpc-0be302e2fa3fdf6c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-00e99f307f4ffd761",
            "default_route_table_id": "rtb-030368103cd1305cb",
            "default_security_group_id": "sg-0911fb9ab7724695a",
            "dhcp_options_id": "dopt-21918546",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be302e2fa3fdf6c5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030368103cd1305cb",
            "owner_id": "463423328685",
            "tags": {
              "Name": "hga-vpc-tf-test"
            },
            "tags_all": {
              "Name": "hga-vpc-tf-test"
            }
          }
        }
      ]
    }
  ]
}